<resources>
    <string name="app_name">Evaluacion_Practica_II_DSM_RS181977_PV181965</string>
    <string name="Iniciosesion">Inicio de sesión</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Nombrecompleto">Nombre de usuario</string>
    <string name="correo">Correo</string>
    <string name="Iniciarsesion">Iniciar sesión</string>
    <string name="Confirmarcontraseña">Confirma la contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="Registro">¿No tienes cuenta?</string>
    <string name="linkregistro">¡Regístrate!</string>
    <string name="OlvidarContraseña">¿Olvidaste tu contraseña?</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="Bienvenido">Bienvenido,</string>
    <string name="NombreUsuario">Nombre de usuario</string>
    <string name="Gestion">Gestión de exámenes</string>
    <string name="TextoEstudiante">Ingresa el código proporcionado por tu profesor para resolver un examen.</string>
    <string name="TextoEstudiante2">Revisa los exámenes a los que ya tienes acceso.</string>
    <string name="Ingresar">Ingresar a examen</string>
    <string name="Historial">Ver mi historial</string>
    <string name="Codigo">Código del exámen</string>
    <string name="AgregarExamen">Agregar Examen</string>
    <string name="GuardarExamen">Guardar Examen</string>
    <string name="NombreExamen">Nombre del examen</string>
    <string name="CodigoExamen">Codigo del examen</string>
    <string name="Verdadero">Verdadero</string>
    <string name="Falso">Falso</string>
    <string name="GestionPreguntas">Gestión de Preguntas</string>
    <string name="AgregarPregunta">Agregar Pregunta</string>
    <string name="Pregunta">Ingresa tu pregunta</string>
    <string name="EliminarExamen">Eliminar Examen</string>
    <string name="PreguntaMultiple">Pregunta opción múltiple</string>
    <string name="PreguntaVerdadoFalso">Pregunta verdad o falso</string>
    <string name="IndicacionPregunta1">Seleccione la respuesta correcta</string>
    <string name="Opcion1">Ingresa la opción 1</string>
    <string name="Opcion2">Ingresa la opción 2</string>
    <string name="Opcion3">Ingresa la opción 3</string>
    <string name="titulorecuperacion">Recuperación de la cuenta</string>
    <string name="enviar">Enviar</string>
    <string name="tituloresultado">Resultado de exámen</string>
    <string name="numeropreguntas">Número de preguntas</string>
    <string name="correctas">Correctas</string>
    <string name="nota">Nota</string>
    <string name="Regresarinicio">Regresar al inicio</string>
    <string name="incorrectas">Incorrectas</string>
    <string name="solución">Solución del examen</string>

    <string name="subtitulorecuperacion">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
</resources>