<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio_sesion">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/TvIniciosesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Iniciosesion"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="@font/montserrat_light"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true">

            <EditText
                android:id="@+id/Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/correo"
                android:drawableLeft="@drawable/ic_correo"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:padding="30dp"
                app:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_medium"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:backgroundTint="@color/orange"
            >


            <EditText
                android:id="@+id/Contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints="@string/Contraseña"
                android:drawableStart="@drawable/ic_candado"
                android:drawableLeft="@drawable/ic_candado"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/Contraseña"
                android:inputType="textPassword"
                android:padding="30dp"
                app:backgroundTint="@color/white"
                android:fontFamily="@font/montserrat_medium"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/Recuperarcontraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:gravity="end"
            android:textColor="@color/orange"
            android:text="@string/OlvidarContraseña"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BotonIniciarsesion"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_boton"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/Iniciarsesion"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:drawableLeft="@drawable/ic_in"
            android:drawablePadding="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/Registro"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_medium"
            />

        <TextView
            android:id="@+id/EnlaceRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0"
            android:text="@string/linkregistro"
            android:textColor="@color/orange"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>