<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarPregunta1">

    <TextView
        android:id="@+id/IndicacionFalsoyVerdadero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/IndicacionPregunta1"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469"
        android:fontFamily="@font/montserrat_medium"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botonCrearPregunta"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@drawable/ic_boton"
        android:fontFamily="@font/montserrat_bold"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/AgregarPregunta"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_save"
        android:drawablePadding="10dp"

        app:layout_constraintVertical_bias="0.937" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:hintAnimationEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158">

        <EditText
            android:id="@+id/Pregunta"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:textSize="20dp"
            android:drawableLeft="@drawable/pregunta"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/Pregunta"
            android:inputType="textMultiLine"
            android:padding="30dp"
            app:backgroundTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck"
            android:fontFamily="@font/montserrat_medium"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/botonRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/ic_regresar"
        tools:ignore="VectorDrawableCompat" />

    <RadioGroup
        android:id="@+id/ContenedorRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.750"
        >

        <RadioButton
            android:id="@+id/RadioVerdadero"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_margin="20dp"
            android:text="@string/Verdadero"
            android:fontFamily="@font/montserrat_light"
            android:textSize="30dp" />

        <RadioButton
            android:id="@+id/RadioFalso"
            android:layout_width="300dp"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:text="@string/Falso"
            android:fontFamily="@font/montserrat_light"
            android:textSize="30dp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>