<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoCuestionario">


    <LinearLayout
        android:id="@+id/contenedor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resultado"
            android:textSize="25dp"
            android:textColor="#8E9295"
            android:fontFamily="@font/montserrat_bold"
            android:textAlignment="center"
            android:padding="5dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/linea"

            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/contenedor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"

        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/contenedor1">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="Examen: "
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />

        <TextView
            android:id="@+id/tvpreguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/numeropreguntas"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />

        <TextView
            android:id="@+id/tvincorrectas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/incorrectas"
            android:textColor="#F40606"
            android:textSize="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
           />

        <TextView
            android:id="@+id/tvcorrectas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/correctas"
            android:textColor="#4CAF50"
            android:textSize="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />

        <TextView
            android:id="@+id/tvnota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/nota"
            android:textColor="#605C5C"
            android:textSize="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />


    </LinearLayout>




    <LinearLayout
        android:id="@+id/contenedor3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/contenedor2"

        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/botonRegresarInicio"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/ic_boton"
            android:drawableLeft="@drawable/ic_baseline_home_24"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/Regresarinicio"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:drawablePadding="10dp"

             />



    </LinearLayout>


    <LinearLayout
        android:id="@+id/contenedor4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/contenedor3"

        >

        <TextView
            android:id="@+id/tvsolucion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solución"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.356" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/contenedor5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/contenedor4"
        android:background="@drawable/contenedor3"
        >


        <ListView
            android:id="@+id/Listasolucion"
            android:layout_width="match_parent"
            android:divider="@color/black"
            android:scrollbars="vertical"
            android:layout_height="350dp"

            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>