<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarExamen">

    <ImageView
        android:id="@+id/botonRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/ic_regresar"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296">

        <EditText
            android:id="@+id/ExamenNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/prueba"
            android:drawablePadding="16dp"
            android:fontFamily="@font/montserrat_medium"
            android:ems="10"
            android:hint="@string/NombreExamen"
            android:inputType="textPersonName"
            android:padding="30dp"
            app:backgroundTint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/CodigoExamen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableStart="@drawable/contrasena"
            android:drawableLeft="@drawable/contrasena"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/CodigoExamen"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:fontFamily="@font/montserrat_medium"
            android:padding="30dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textoagregarexamen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AgregarExamen"
        android:textColor="@color/black"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        android:fontFamily="@font/montserrat_medium"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BotonCrearExamen"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/ic_boton"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/GuardarExamen"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688"
        android:fontFamily="@font/montserrat_bold"
        android:drawableLeft="@drawable/ic_save"
        android:drawablePadding="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>