<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenido"
        android:textColor="#3A3737"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        android:fontFamily="@font/montserrat_bold"
        android:layout_margin="5dp"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BotonCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_boton3"
        android:drawableLeft="@drawable/ic_baseline_close_24"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/CerrarSesion"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157"
        android:fontFamily="@font/montserrat_bold"
        />

    <TextView
        android:id="@+id/Gestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gestion"
        android:textColor="@color/black"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        android:fontFamily="@font/montserrat_medium"
        />

    <TextView
        android:id="@+id/NombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/NombreUsuario"
        android:textColor="#656363"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_end="433dp" />


    <LinearLayout
        android:id="@+id/contenedor5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"

        android:background="@drawable/contenedor3"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
    <ListView
        android:id="@+id/ListaExamenes"
        android:layout_width="match_parent"
        android:layout_height="415dp"
        android:scrollbars="vertical"
        android:padding="10dp"
      ></ListView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/BotonAgregarExamen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306"
        app:srcCompat="@drawable/ic_outline_add_24" />


</androidx.constraintlayout.widget.ConstraintLayout>